--- a/static/css/index.css
+++ b/static/css/index.css
@@ -216,3 +216,12 @@ h1 {
     text-align: center;
     margin: 100px;
 }
+
+#search_bar {
+    width: 100%;
+    color: rgb(0, 0, 0);
+    font-size: large;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 10px;
+
+}
